# tedwm

./: Cargo.toml  README.md
src/: main.rs
src/lib/: buffer.rs  frame.rs  input.rs  mod.rs  seq_set.rs  tui.rs  window.rs
