[package]
name = "tedwm"
version = "0.1.0"
authors = ["bryal <96.bryal@gmail.com>"]

[features]
default = []
profiling = ["cpuprofiler"]

[dependencies]
clap = "2.20"
futures = "0.1.11"
lazy_static = "0.2"
termion = "1.2"
tokio-timer = "0.1"
unicode-segmentation = "1.1"
unicode-width = "0.1"
sequence_trie = "0.3"
itertools = "0.6"

cpuprofiler = { version = "0.0", optional = true }